<resources>
    <string name="app_name">唯觅</string>
    <string name="login">登录</string>
    <string name="login_weme_user">注册 WEME 用户</string>
    <string name="account_or_password_not_null">帐号和密码不能为空</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="activity">活动</string>
    <string name="community">社区</string>
    <string name="me">个人</string>
    <string name="network_error">网络异常</string>
    <string name="friend">好友</string>
    <string name="message">消息</string>
    <string name="location">附近</string>
    <string name="discovery">发现</string>
    <string name="food">美食</string>
    <string name="setting">设置</string>
    <string name="more_than_99">99+</string>
    <string name="loading">正在加载</string>
    <string name="today_visit">今日访问</string>
    <string name="total_visit">总访问</string>
    <string name="basic_info">基本信息</string>
    <string name="name">姓名</string>
    <string name="year">年龄</string>
    <string name="school_info">学校信息</string>
    <string name="school">学校</string>
    <string name="education">学历</string>
    <string name="major">专业</string>
    <string name="home_info">家乡信息</string>
    <string name="home">家乡</string>
    <string name="contact_info">联系方式</string>
    <string name="QQ">QQ</string>
    <string name="wechat">微信</string>
    <string name="larger_than_you">比你大</string>
    <string name="the_same_birth">同一天生日</string>
    <string name="smaller_than_you">比你小</string>
    <string name="he">他</string>
    <string name="her">她</string>
    <string name="has_follow_he">已关注他，取消关注</string>
    <string name="has_follow_she">已关注她，取消关注</string>
    <string name="he_has_follow_you">他已关注你，去关注他吧</string>
    <string name="she_has_follow_you">她已关注你，去关注她吧</string>
    <string name="has_follow_each_other">已互相关注，点击取消关注</string>
    <string name="add_follow">添加关注</string>
    <string name="reply">回复</string>
    <string name="new_post">发帖</string>
    <string name="send">发送</string>
    <string name="please_input_title">标题</string>
    <string name="say_something">说点什么吧</string>
    <string name="committing">正在上传</string>
    <string name="commit">评论</string>
    <string name="reply_failed">回复失败</string>
    <string name="minute_ago">分钟前</string>
    <string name="hour_ago">小时前</string>
    <string name="day_ago">天前</string>
    <string name="week_ago">周前</string>
    <string name="month_ago">个月前</string>
    <string name="year_ago">年前</string>
    <string name="publish_in">发表于</string>
    <string name="register_weme_user">注册WEME用户</string>
    <string name="user_contract">用户协议</string>
    <string name="name_not_empty">用户名不能为空</string>
    <string name="password_long_6">密码至少6位</string>
    <string name="password_not_equal">密码不一致</string>
    <string name="birth_not_empty">生日不能为空</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="school_not_empty">学校不能为空</string>
    <string name="choose_degree">请选择学历</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="person_info">个人信息</string>
    <string name="boy">男</string>
    <string name="people_see_me">关注我的人</string>
    <string name="message_list">私信列表</string>
    <string name="hometown_unknown">家乡(未知)</string>
    <string name="follow">关注</string>
    <string name="cancel">取消</string>
    <string name="follow_fail">关注失败</string>
    <string name="follow_success">关注成功</string>
    <string name="recommend">&#160;推荐</string>
    <string name="pre_people">人均&#160;</string>
    <string name="come_from">By&#160;</string>
    <string name="add_food_card">编辑一张美食卡片，分享吧</string>
    <string name="sure_to_unfollow">确定取消关注吗？</string>
    <string name="unfollow">取消关注</string>
    <string name="not_unfollow">不取消关注</string>
    <string name="unfollow_fail">取消关注失败</string>
    <string name="unfollow_success">取消关注成功</string>
    <string name="change_background">改变背景照</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="edit_info">修改个人信息</string>
    <string name="reply_message">回复私信</string>
    <string name="birth">生日</string>
    <string name="hunderds_meters">百米</string>
    <string name="thousand_meters">KM</string>
    <string name="distance_unknown">距离未知</string>
    <string name="food_location">美食地点</string>
    <string name="find">寻觅</string>
    <string name="cache_removed">清空缓存完毕</string>
    <string name="edit_fail">修改设置失败</string>
    <string name="shown_in_find">您将出现在发现列表中</string>
    <string name="not_shown_in_found">您将不会出现在发现列表中</string>
    <string name="activity_detail">活动详情</string>
    <string name="new_version_found">发现新版本。</string>
    <string name="whether_update_or_not">发现新版本,是否更新?</string>
    <string name="update">更新</string>
    <string name="sure">确认</string>
    <string name="ok">确认</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="please_choose_education">请选择学历</string>
    <string name="benke">本科</string>
    <string name="master">硕士</string>
    <string name="doctor">博士</string>
    <string name="send_message">发私信</string>
    <string name="edit_food_card">编辑美食卡片</string>
    <string name="finish">完成</string>
    <string name="food_title_hint">美食名称（必填）</string>
    <string name="food_comment_hint">美食评论（可选，100字以内)</string>
    <string name="price_per_person">人均消费</string>
    <string name="price_range">价格范围</string>
    <string name="please_input_food_title">请输入美食标题</string>
    <string name="please_choose_location">请选择美食地点</string>
    <string name="please_choose_price">请选择美食价格</string>
    <string name="please_choose_picutre">请选择美食图片</string>
    <string name="upload_food_fail">上传美食失败</string>
    <string name="upload_food_finish">上传美食完成,等待审核</string>
    <string name="register_phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="gain_verification">获取验证码</string>
    <string name="set_password">输入密码</string>
    <string name="copy_password">重新输入密码</string>
    <string name="register">注册</string>
    <string name="please_input_phone">请输入11位数字手机号码</string>
    <string name="code_length">请输入正确的验证码</string>
    <string name="send_code_complete">发送验证码完成</string>
    <string name="forget_password">忘记密码？</string>
    <string name="reset_password">重置密码</string>
    <string name="search_activity">搜索活动</string>
    <string name="publish_activity">发布活动</string>
    <string name="qr_code">二维码</string>
    <string name="send_message_m">发送消息</string>
    <string name="continue_find">继续寻觅</string>
    <string name="private_letter">私信</string>
    <string name="my_tag">我的标签#</string>
    <string name="longclick">长按可编辑或删除标签</string>
    <string name="edit">编辑</string>
    <string name="edit_tag">编辑标签</string>
    <string name="delete_tag">删除标签</string>
    <string name="add_tag">添加标签…</string>
    <string name="no_tag">暂无标签</string>
    <string name="nearby">附近</string>
    <string name="distance_for_you">距你</string>
    <string name="delete">删除</string>
    <string name="audio_record">录制个人介绍</string>
    <string name="upload_record">上传录音</string>
    <string name="record_string">录制一段语音介绍自己吧</string>
    <string name="recording">录音中，点击结束录音。</string>
    <string name="audio_re_record">重新录音</string>
    <string name="audio_play_record">播放录音</string>
    <string name="audio_palying">正在播放录音，请先暂停。</string>
    <string name="audio_stop_playing">点击结束播放。</string>
    <string name="please_stop_playing_first">播放中，请先暂停播放</string>
    <string name="upload_audio_record_finis">上传录音完成</string>
    <string name="upload_audio_record_fail">上传录音失败</string>


    <string-array name="aty_info_tabs">
        <item >个人资料</item>
        <item >时间轴</item>
        <item >图集</item>
    </string-array>

    <string-array name="aty_user_activity_titles">
        <item >我发布的活动</item>
        <item >我关注的活动</item>
        <item >我报名的活动</item>
    </string-array>

    <string-array name="food_card_price">
        <item >免费</item>
        <item >1&#8211;10</item>
        <item >10&#8211;50</item>
        <item >50&#8211;100</item>
        <item >100&#8211;200</item>
        <item >200&#8211;500</item>
        <item >500&#8211;1000</item>
        <item >1000+</item>
    </string-array>

    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>

</resources>
