<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@null"
    android:layout_height="match_parent">
<TextView
    android:background="@color/white"
    android:id="@+id/aty_discovery_option_follow"
    android:textSize="16sp"
    android:textColor="@color/colorPrimary"
    android:gravity="center"
    android:text="@string/follow"
    android:layout_width="match_parent"
    android:layout_height="40dp" />
    <View
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <TextView
        android:background="@color/white"
        android:id="@+id/aty_discovery_option_message"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/message"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <View
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="4dp"/>

    <TextView
        android:background="@color/white"
        android:id="@+id/aty_discovery_option_cancel"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</LinearLayout>