<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="160dp"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">
    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/search_activity"
        android:id="@+id/action_search"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/publish_activity"
        android:id="@+id/action_publish"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/qr_code"
        android:id="@+id/action_qrcode"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</LinearLayout>