<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/main_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <View
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <space.weme.remix.widgt.TabItem
            app:image="@mipmap/main_tab_item_activity"
            app:text="@string/activity"
            android:id="@+id/main_item_activity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <space.weme.remix.widgt.TabItem
            app:image="@mipmap/main_tab_item_social"
            app:text="@string/community"
            android:id="@+id/main_item_community"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <space.weme.remix.widgt.TabItem
            app:image="@mipmap/discover"
            app:text="@string/find"
            android:id="@+id/main_item_find"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <space.weme.remix.widgt.TabItem
            app:image="@mipmap/main_tab_item_me"
            app:text="@string/me"
            android:id="@+id/main_item_me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>