<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/basic_info"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@color/grey_gap"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/name"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_name"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/birth"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_birth"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>



        <TextView
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/school_info"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@color/grey_gap"
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/school"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_school"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/education"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_education"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/major"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_major"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <TextView
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/home_info"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@color/grey_gap"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/home"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_home"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>


        <TextView
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/contact_info"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@color/grey_gap"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/QQ"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_qq"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="start"
                android:text="@string/wechat"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/aty_info_we_chat"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <View
            android:background="@color/grey_gap"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/aty_info_view1_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:textColor="@color/white"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:background="@drawable/bg_aty_info_follow"
                android:id="@+id/aty_info_follow_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp" />

            <Button
                android:text="@string/send_message"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_aty_info_follow"
                android:id="@+id/aty_info_message_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>