<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@null"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/white"
        android:id="@+id/aty_info_option_audio_record"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/audio_record"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <View
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <TextView
        android:background="@color/white"
        android:id="@+id/aty_info_option_edit_info"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/edit_info"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <View
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <TextView
        android:background="@color/white"
        android:id="@+id/aty_info_option_change_background"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/change_background"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <!--<View-->
        <!--android:background="@color/grey_gap"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="6dp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/aty_info_option_voice"-->
        <!--android:textSize="20sp"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/record_voice"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp" />-->
    <View
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="6dp"/>

    <TextView
        android:background="@color/white"
        android:id="@+id/aty_info_option_cancel"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</LinearLayout>