<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/new_post"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/aty_post_new_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </FrameLayout>

    <EditText
        android:hint="@string/please_input_title"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:id="@+id/aty_post_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <EditText
        android:hint="@string/say_something"
        android:background="@null"
        android:layout_margin="16dp"
        android:gravity="top"
        android:textSize="14sp"
        android:id="@+id/aty_post_new_content"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <space.weme.remix.widgt.GridLayout
        android:id="@+id/aty_post_new_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/aty_post_new_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </space.weme.remix.widgt.GridLayout>
    <View
        android:background="@color/grey_gap"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


</LinearLayout>