<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/fgt_add_food_picture"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        app:placeholderImage="@mipmap/add_image"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <EditText
        android:background="@null"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/edit_text_food_name"
        android:hint="@string/food_title_hint"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <EditText
        android:gravity="top"
        android:lines="4"
        android:background="@null"
        android:hint="@string/food_comment_hint"
        android:textSize="14sp"
        android:id="@+id/edit_text_comment"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:id="@+id/fgt_add_food_location"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/location" />

        <TextView
            android:id="@+id/fgt_add_text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/food_location"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey_gap" />

    <LinearLayout
        android:id="@+id/fgt_add_food_price"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/yuan" />

        <TextView
            android:id="@+id/fgt_add_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/price_per_person"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_weight="1"
        android:background="@color/grey_gap"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>